NetBSD Problem Report #43664

From mlelstv@henery.1st.de  Sun Jul 25 12:35:58 2010
Return-Path: <mlelstv@henery.1st.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id BF50D63BAE5
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 25 Jul 2010 12:35:58 +0000 (UTC)
Message-Id: <20100725123534.5AB6F28168@henery.1st.de>
Date: Sun, 25 Jul 2010 14:35:34 +0200 (CEST)
From: mlelstv@serpens.de
Reply-To: mlelstv@serpens.de
To: gnats-bugs@gnats.NetBSD.org
Subject: fragmentation on lo0 causes panic
X-Send-Pr-Version: 3.95

>Number:         43664
>Category:       kern
>Synopsis:       fragmentation on lo0 causes panic
>Confidential:   no
>Severity:       critical
>Priority:       medium
>Responsible:    martin
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jul 25 12:40:01 +0000 2010
>Closed-Date:    Sun Jun 05 08:44:59 +0000 2011
>Last-Modified:  Mon Oct 31 13:20:02 +0000 2011
>Originator:     Michael van Elst
>Release:        NetBSD-current
>Organization:
-- 
                                Michael van Elst
Internet: mlelstv@serpens.de
                                "A potential Snark may lurk in every tree."
>Environment:


System: NetBSD pussyfoot 5.99.36 NetBSD 5.99.36 (PUSSYFOOT) #117: Sat Jul 24 08:09:32 CEST 2010 mlelstv@henery:/home/netbsd-current/obj.amd64/home/netbsd-current/src/sys/arch/amd64/compile/PUSSYFOOT amd64
Architecture: x86_64
Machine: amd64
>Description:
I tried to cause IP fragmentation on the loopback interface and it
panics reproducably with

panic: kernel diagnostic assertion "m->m_pkthdr.csum_flags & M_CSUM_IPv4" failed: file "/home/netbsd-current/src/sys/netinet/ip_output.c", line 1033

>How-To-Repeat:

ifconfig lo0 mtu 100
route change 127.0.0.1 -mtu 100
ping -s 500 127.0.0.1

>Fix:


>Release-Note:

>Audit-Trail:
From: Antti Kantee <pooka@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43664 CVS commit: src/tests/net
Date: Sun, 25 Jul 2010 21:42:09 +0000

 Module Name:	src
 Committed By:	pooka
 Date:		Sun Jul 25 21:42:09 UTC 2010

 Modified Files:
 	src/tests/net: Makefile
 Added Files:
 	src/tests/net/if_loop: Makefile t_pr.c

 Log Message:
 Add xfail test for kernel diagnostic panic described in PR kern/43664


 To generate a diff of this commit:
 cvs rdiff -u -r1.4 -r1.5 src/tests/net/Makefile
 cvs rdiff -u -r0 -r1.1 src/tests/net/if_loop/Makefile \
     src/tests/net/if_loop/t_pr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: kern-bug-people->martin
Responsible-Changed-By: martin@NetBSD.org
Responsible-Changed-When: Sat, 09 Apr 2011 20:11:01 +0000
Responsible-Changed-Why:
Testing a fix ....


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43664 CVS commit: src/sys/netinet
Date: Sat, 9 Apr 2011 20:34:36 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sat Apr  9 20:34:36 UTC 2011

 Modified Files:
 	src/sys/netinet: ip_output.c

 Log Message:
 We do not do checksums on loopback interfaces, not even if fragmenting.
 Fixes PR kern/43664.


 To generate a diff of this commit:
 cvs rdiff -u -r1.205 -r1.206 src/sys/netinet/ip_output.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sat, 09 Apr 2011 20:36:50 +0000
State-Changed-Why:
Works for me in -current, can you please verify?


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43664 CVS commit: src/sys/netinet
Date: Sat, 9 Apr 2011 21:00:53 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sat Apr  9 21:00:53 UTC 2011

 Modified Files:
 	src/sys/netinet: ip_output.c

 Log Message:
 PR kern/43664:
 mlelstv pointed out that we sometimes may use checksums on loopback
 interfaces. Make the test consistent with the code path selecting
 the checksum operation before invoking fragmentation.


 To generate a diff of this commit:
 cvs rdiff -u -r1.206 -r1.207 src/sys/netinet/ip_output.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Michael van Elst <mlelstv@serpens.de>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/43664
Date: Sun, 5 Jun 2011 07:51:23 +0200

 pussyfoot# ifconfig lo0 mtu 100
 pussyfoot# route change 127.0.0.1 -mtu 100
 change host 127.0.0.1
 pussyfoot# ping -s 500 127.0.0.1
 PING localhost (127.0.0.1): 500 data bytes
 508 bytes from 127.0.0.1: icmp_seq=0 ttl=255 time=0.094 ms
 508 bytes from 127.0.0.1: icmp_seq=1 ttl=255 time=0.893 ms

 tcpdump on lo0 shows the fragments:

 07:47:47.010322 IP 127.0.0.1 > 127.0.0.1: ICMP echo request, id 1803, seq 20, length 80
 07:47:47.010323 IP 127.0.0.1 > 127.0.0.1: icmp
 07:47:47.010323 IP 127.0.0.1 > 127.0.0.1: icmp
 07:47:47.010324 IP 127.0.0.1 > 127.0.0.1: icmp
 07:47:47.010324 IP 127.0.0.1 > 127.0.0.1: icmp
 07:47:47.010325 IP 127.0.0.1 > 127.0.0.1: icmp
 07:47:47.010325 IP 127.0.0.1 > 127.0.0.1: icmp

 So -current works fine now, the PR can be closed.


 -- 
                                 Michael van Elst
 Internet: mlelstv@serpens.de
                                 "A potential Snark may lurk in every tree."

State-Changed-From-To: feedback->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sun, 05 Jun 2011 08:44:59 +0000
State-Changed-Why:
Confirmed fixed


From: "YAMAMOTO Takashi" <yamt@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43664 CVS commit: src/sys/netinet
Date: Mon, 31 Oct 2011 13:16:02 +0000

 Module Name:	src
 Committed By:	yamt
 Date:		Mon Oct 31 13:16:01 UTC 2011

 Modified Files:
 	src/sys/netinet: ip_output.c

 Log Message:
 redo ip_output.c rev.1.206 and 1.207 differently.  PR/43664.
 ok'ed by martin@


 To generate a diff of this commit:
 cvs rdiff -u -r1.209 -r1.210 src/sys/netinet/ip_output.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.