We do not do checksums on loopback interfaces, not even if fragmenting. Fixes PR kern/43664.